# tensor-compression-methods

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.cache/: method_logs.json
docs/: some_methods_for_tensors_and_tensors_data_types.md
experiments/: EEG.ipynb  EEG_2.ipynb  SVD.ipynb  SVD_test.ipynb  check_methods_logs.ipynb  compare_decomposition_in_some_tasks.ipynb  optimize_ranks.ipynb  optimize_ranks_2_tucker.ipynb  some_methods_comparison.ipynb  tensorly_check.ipynb
experiments/CNN_decomposition/: Plot.ipynb  Test.ipynb  test.py
experiments/CNN_decomposition/CPD_conv/0/: flops_params.json  layer_norms.txt
experiments/CNN_decomposition/CPD_conv/1/: flops_params.json  layer_norms.txt
experiments/CNN_decomposition/CPD_conv/10/: flops_params.json  layer_norms.txt
experiments/CNN_decomposition/CPD_conv/11/: flops_params.json  layer_norms.txt
experiments/CNN_decomposition/CPD_conv/12/: flops_params.json  layer_norms.txt
experiments/CNN_decomposition/CPD_conv/13/: flops_params.json  layer_norms.txt
experiments/CNN_decomposition/CPD_conv/14/: flops_params.json  layer_norms.txt
experiments/CNN_decomposition/CPD_conv/15/: flops_params.json  layer_norms.txt
experiments/CNN_decomposition/CPD_conv/16/: flops_params.json  layer_norms.txt
experiments/CNN_decomposition/CPD_conv/17/: flops_params.json  layer_norms.txt
experiments/CNN_decomposition/CPD_conv/18/: flops_params.json  layer_norms.txt
experiments/CNN_decomposition/CPD_conv/19/: flops_params.json  layer_norms.txt
experiments/Evaluation/: evaluation.ipynb  read_results.ipynb
experiments/GAN_decomposition/: main.ipynb
experiments/IPIP-NEO_data_repository/: README.md  check_data.ipynb
experiments/Linear_decomposition/: main.ipynb
experiments/logs/: 2024-10-11 method_logs.json  2024-10-17 method_logs.json  2024-10-18 method_logs.json  2024-10-24 method_logs.json  2025-02-23 method_logs.json  method_logs - tensorly - t3f copy.json  old format method_logs - tensorly copy.json
src/model_compressor/: calculate_bounds.py  calculate_optimized_rank.py  calculate_optimized_rank_for_nn_layer.py  custom_compression_ratio.py  model_compressor.py
src/utils/: eeg_controller.py  image_controller.py  method_loggers.py  method_runners.py  metrics_calculators.py  model_compressor.py  optimal_rank_finders.py  read_logs.py  save_frames.py  tensor_handlers.py  tensor_reconstructors.py  trackers.py  video_controller.py
src/utils/benchmark/: calculate_bounds.py  calculate_optimized_rank_tensor_train.py  calculate_optimized_rank_tucker.py
(+285 files in other folders)
