[project]
name = "tensor-compression-methods"
version = "0.1.0"
description = "Some experiments with tensor methods compression"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "json5>=0.9.25",
    "jupyter>=1.1.1",
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "memory-profiler>=0.61.0",
    "notebook>=7.2.2",
    "numba>=0.60.0; platform_system != 'Windows'",
    "opencv-python>=4.10.0.84; platform_system != 'Windows'",
    "pandas>=2.2.3",
    "physics-tenpy>=1.0.4; platform_system != 'Windows'",
    "pip>=24.2",
    "psutil>=6.0.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "t3f>=1.2.0; platform_system != 'Windows'",
    "tensorflow[and-cuda]>=2.17.0; platform_system != 'Windows'",
    "tensorly>=0.8.1; platform_system != 'Windows'",
    "torch>=2.0.1; platform_system != 'Windows'",
    "tqdm>=4.66.5; platform_system != 'Windows'",
    "yt-dlp>=2024.9.27",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "ruff>=0.6.8",
    "yamlfix>=1.17.0",
]

[tool.uv.sources]

[tool.ruff]
line-length = 155

[tool.ruff.lint]
select = ["ALL"]

extend-ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "D211",
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
    "D203",
    "PLR0913", # Too many arguments in function definition (x > 5)
    "B018", # Found useless expression. Either assign it to a variable or remove it
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "T201",  # `print` found
    "ERA001",
    "RUF001",  # RUF001 String contains ambiguous `ะต` (CYRILLIC SMALL LETTER IE). Did you mean `e` (LATIN SMALL LETTER E)?
    "RUF003",
    "RET504",
    "T203",
    "FBT002",
    "FBT001",
    "PGH003",
    "S110", # S110 `try`-`except`-`pass` detected, consider logging the exception
    "EM102", # EM102 Exception must not use an f-string literal, assign to variable first
    "E402", # E402 Module level import not at top of cell

]
